--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@centurylink/chi",
-  "version": "6.89.0",
+  "version": "6.90.0",
   "description": "Chi is Lumen's design system for building consistent digital products and experiences.",
   "license": "MIT",
   "private": false,
@@ -18,6 +18,8 @@
     "build": "bash ./scripts/build/build.sh",
     "sync:skills": "tsx src/mcp/scripts/sync-skills.ts",
     "build:mcp": "tsx src/mcp/scripts/generate.ts",
+    "generate:css-vars": "tsx scripts/generate-css-custom-properties.ts",
+    "generate:token-metadata": "tsx scripts/generate-css-custom-properties.ts --json-only",
     "serve": "node ./scripts/serve/serve.cjs",
     "cy:run": "cypress run --config-file cypress.config.cjs",
     "cy:open": "cypress open --config-file cypress.config.cjs",
